# kara

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  c1  c6  c70  d2  lk2  sl  sp  tc  tup_vec
.github/workflows/: ci.yml  compile-speed.yml
bench/: README.md  bench.sh
bench/auto_par_io/: .gitignore  README.md  bench.sh  blocks_fanout.kara  blocks_fanout_par.kara  positive_control.kara
bench/compile_speed/: README.md  baseline.json  bench.sh  compare.py  gen_synthetic.py  seed_kata.kara  seed_kata.rs  synthetic.kara  synthetic.rs
bench/hash_quality/: Cargo.toml
bench/hot_swap_cost/: README.md  moderate_call.kara  tight_call.kara
bench/wasm_size/: .gitignore  README.md  bench.sh  sizes.json  sizes.md
bench/wasm_size/src/rust/filter_core/: Cargo.toml
bench/wasm_size/src/rust/filter_core/src/: main.rs
bench/wasm_size/src/rust/hello/: Cargo.toml
brainstorming/archive/: shared_types.md  v1.md  v10.md  v11.md  v12.md  v13.md  v14.md  v15.md  v16.md  v17.md  v18.md  v19.md  v2.md  v20.md  v21.md  v22.md  v23.md  v24.md  v25.md  v26.md  v27.md  v28.md  v29.md  v3.md  v30.md  v31.md  v32.md  v33.md  v34.md  v35.md  v36.md  v37.md  v38.md  v39.md  v4.md  v40.md  v41.md  v42.md  v43.md  v44.md  (+34 more)
brainstorming/design_audit_v1/: findings-001-025.md  findings-026-050.md  findings-051-075.md  findings-076-100.md  index.md
brainstorming/design_studies/: findings.md
docker/: lsan.Dockerfile
docs/: bug-ledger.jsonl  bug-ledger.md  deferred.md  demo_ideas.md  design.md  diagnostic-fix-audit.md  dogfooding.md  glossary.md  registry-proxy-protocol.md  roadmap.md  syntax.md
docs/book/: book.toml
docs/implementation_checklist/: README.md  phase-1-lexer.md  phase-10-targets.md  phase-11-stdlib-longtail.md  phase-12-self-hosting.md  phase-2-parser-ast.md  phase-3-effect-checker.md  phase-4-interpreter.md  phase-5-diagnostics.md  phase-6-runtime.md  phase-7-codegen.md  phase-8-stdlib-floor.md  wip-list1.md  (+2 more)
examples/: array_basics.kara  autograd_training.kara  bench_repl_amortization.rs  elevator.kara  heap.expected  heap.kara  json.expected  json.kara  pipeline.expected  pipeline.kara  protobuf_schema.kara  semantic_search.kara  slice_basics.kara  vm.expected  vm.kara  word_count.kara
examples/parallax/bench/rust/: Cargo.toml
examples/parallax/bench/rust/src/: main.rs
examples/ws_idle_holder/bench/: Cargo.toml  README.md  REPORT.md
examples/ws_idle_holder/bench/scripts/: bench_baseline.json  bench_gate.py  ec2_setup.sh  reap_1m.sh  reap_check.sh  run_1m.sh  run_250k.sh  run_2m.sh  run_50k.sh
examples/ws_idle_holder/bench/src/: main.rs
examples/ws_idle_holder/rust/: Cargo.toml  README.md
examples/ws_idle_holder/rust/src/: main.rs
fuzz/: Cargo.toml
kernel/: Cargo.toml
kernel/python/: .gitignore  README.md  pyproject.toml
kernel/python/karac_kernel/: __init__.py  __main__.py  install.py  kernel.json  launcher.py
kernel/python/tests/: test_install.py  test_launcher.py
kernel/src/: connection.rs  main.rs  runtime.rs  transport.rs  wire.rs  zmq_transport.rs
lsp/: Cargo.toml
lsp/src/: analysis.rs  lib.rs  main.rs
lsp/tests/: server.rs
playground/: Cargo.toml  build.sh
playground/src/: lib.rs
playground/web/: index.html  playground.css  playground.js
registry-proxy/: Cargo.toml  README.md
registry-proxy/src/: lib.rs  main.rs
runtime/: Cargo.toml  SYMBOL_KEEP_LIST.md
runtime/src/: alloc.rs  arena.rs  bounded_channel.rs  channel.rs  clone.rs  cpu.rs  emutls.rs  event_loop.rs  fatal.rs  file.rs  fmt.rs  gpu.rs  interner.rs  lazy.rs  lib.rs  lifecycle.rs  map.rs  mutex.rs  once.rs  pool.rs  process.rs  rate_limiter.rs  regex.rs  scheduler.rs  semaphore.rs  seq_scheduler.rs  sso.rs  tls.rs  tracing.rs  wasm_alloc.rs  wasm_threads_scheduler.rs  weak.rs
runtime/stdlib/: alloc_error.kara  arena.kara  atomic.kara  autograd.kara  bf16.kara  bounded_channel.kara  bufreader.kara  bufwriter.kara  channel.kara  cli.kara  column.kara  critical_section.kara  dataframe.kara  debug.kara  display.kara  drop.kara  elementwise_map.kara  elementwise_ord.kara  embeddings.kara  entry.kara  exitcode.kara  f16.kara  f32.kara  f64.kara  from.kara  http.kara  index.kara  interner.kara  into.kara  into_iterator.kara  intrinsics.kara  io.kara  io_error.kara  iterator.kara  lazy.kara  map.kara  mem.kara  memory_ordering.kara  mutex.kara  nul_error.kara  (+41 more)
runtime/tls-cross-probe/embedded/: Cargo.toml
runtime/tls-cross-probe/embedded/src/: lib.rs
runtime/tls-cross-probe/std/: Cargo.toml
runtime/tls-cross-probe/std/src/: lib.rs
scripts/: bug-curve.py  bug-lint.sh  drop-fuzz.sh  lsan-local.sh  oracle-sync-guard.sh  sync-bench-charts.sh
selfhost/: kara.toml
src/: ast.rs  attribute_validator.rs  build_cache.rs  call_graph.rs  catalog.rs  cfg.rs  cheader.rs  cli.rs  codegen.rs  codegen_queries.rs  componentize.rs  comptime.rs  concurrency.rs  concurrency_report.rs  cost_summary.rs  crash_report.rs  cross_task_safe.rs  def_path.rs  dep_diagnostic.rs  dep_graph.rs  dep_resolver.rs  desugar.rs  diagnostic_attrs_lint.rs  diagnostic_class.rs  doc.rs  dominator.rs  drop_differential.rs  effect_graph.rs  effect_render.rs  effectchecker.rs  exhaustive.rs  fallible_alloc.rs  ffi_lint.rs  float_math.rs  fork_threshold_queries.rs  format_spec.rs  formatter.rs  git_fetch.rs  gpu_wgsl.rs  inline_hints.rs  (+52 more)
tests/: abi_repr_c_struct.rs  book_snippets.rs  cli.rs  codegen.rs  codegen_queries.rs  comptime.rs  comptime_ast.rs  comptime_derive.rs  comptime_reflection.rs  concurrency.rs  concurrency_report.rs  coro_e2e.rs  cross_task_safe.rs  diagnostic_attrs_lint.rs  doc.rs  drop_differential.rs  effect_inference_bench.rs  effectchecker.rs  elision.rs  ffi_lint.rs  fork_threshold_queries.rs  git_fetch_e2e.rs  http_client_codegen.rs  http_server.rs  interpreter.rs  karac_jit_runner_repl.rs  layout_queries.rs  lexer.rs  lljit_e2e.rs  lljit_prototype.rs  logical_lint.rs  lowering.rs  manifest.rs  mcjit_prototype.rs  memory_sanitizer.rs  missing_must_use_lint.rs  missing_track_caller_lint.rs  module_graph.rs  monomorphization.rs  must_use_lint.rs  (+46 more)
(+624 files in other folders)
