[workspace]
members = ["runtime"]
# Slice E (Parallax bench harness, 2026-05-09) — the `examples/parallax/
# bench/rust/` subproject is a self-contained reference implementation
# of the bench server in idiomatic tokio + hyper. Excluded from the
# karac-rust workspace so its dep tree (hyper / tokio / hyper-util)
# resolves independently of the compiler crate's deps and isn't built
# as part of `cargo test` in this workspace.
exclude = ["examples/parallax/bench/rust"]

[package]
name = "karac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
llvm = ["inkwell"]

[dependencies]
inkwell = { version = "0.9", features = ["llvm18-1-prefer-dynamic"], optional = true }
toml = { version = "0.8", default-features = false, features = ["parse"] }
regex = "1"
ureq = "2"
rustyline = "18.0.0"
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["html"] }
# Slice F (`std.json`): backs the interpreter's `Json.parse` /
# `Json.stringify` dispatch directly (the runtime crate exposes the
# same impl through FFI for codegen builds — locked design choice (iii)).
# `preserve_order` feature gives insertion-order Object iteration per
# locked design choice (ii).
serde_json = { version = "1", features = ["preserve_order"] }

# Binary-size phase 1: drop `__eh_frame` + `__unwind_info` from emitted
# binaries by removing unwind tables from the runtime's release build.
# `karac_par_run` uses `std::panic::catch_unwind`; with `panic = "abort"`
# a panic in a worker aborts the process instead of unwinding, which is
# the desired behavior for `par {}` fail-fast semantics anyway. The
# `catch_unwind` call still compiles (it returns `Err` only on unwind)
# but becomes effectively unreachable — the compiler/runtime pair stays
# correct, and the binary loses unwind metadata on representative E2E
# builds.
#
# Cargo currently does not allow `panic` to be specified per-package
# (`panic may not be specified in a package profile`), so this lives at
# the workspace root and applies to release builds of every workspace
# member. Effect on the karac compiler itself: only its `--release`
# build is affected; default `cargo build` and `cargo test` use the dev
# profile and keep the default `panic = "unwind"`, so test-time panic
# capture and dev-mode backtraces are unchanged.
#
# See `docs/implementation_checklist/phase-7-codegen.md § "Phase 1
# binary-size optimization"` close-out for measured size deltas.
#
# Binary-size phase 2: thin LTO so the link-time DCE pass
# (`-Wl,-dead_strip` on Mach-O / `-Wl,--gc-sections` on ELF, applied at the
# cc-line in `link_executable_impl`) can see across the runtime's
# transitively-imported tokio / hyper / serde_json dep graph. Without LTO,
# rustc emits each crate as opaque object files and the linker can only
# DCE at object granularity — most useful symbols sit in the same object as
# their dependents and survive. With thin LTO, the bitcode pass inlines
# and devirtualizes across crate boundaries, exposing the actual call
# graph, then `-dead_strip` drops everything unreached from the entry
# point. Cargo does not permit `lto` in a per-package profile (same
# constraint as `panic`), so this applies to every workspace member's
# release build. The karac compiler's release builds pay a modest
# compile-time cost; for v1 the runtime-archive size win on every Kāra
# program more than offsets it.
[profile.release]
panic = "abort"
lto = "thin"
