[workspace]
members = ["runtime", "playground", "kernel"]
# Slice E (Parallax bench harness, 2026-05-09) — the `examples/parallax/
# bench/rust/` subproject is a self-contained reference implementation
# of the bench server in idiomatic tokio + hyper. Excluded from the
# karac-rust workspace so its dep tree (hyper / tokio / hyper-util)
# resolves independently of the compiler crate's deps and isn't built
# as part of `cargo test` in this workspace.
#
# Demo 1 slice 3 (phase-6-runtime.md line 180) — `examples/ws_idle_holder/
# bench/` is the flagship-demo bench-harness client (tokio + rustls,
# opens N idle wss:// connections + measures connect latency / per-conn
# memory / churn). Same rationale: its tokio-rustls dep tree resolves
# independently and it isn't part of the workspace `cargo test`.
exclude = ["examples/parallax/bench/rust", "examples/ws_idle_holder/bench"]

[package]
name = "karac"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
llvm = ["inkwell"]
# Throwaway prototype gate for phase-7 L558 sub-step (a): inkwell-MCJIT
# round-trip of representative Kāra modules. Off by default; not shipped
# in the normal karac binary. Removed when the orc2 wrap (L560) lands.
mcjit_prototype = ["llvm"]
# Phase-7 L560 W1+ gate: orc2/LLJIT wrap, calling `llvm-sys::orc2`
# directly (inkwell does not expose ORC v2). Off by default; promoted
# to default + integrated into `karac repl`/`karac test` once W6 closes.
lljit_prototype = ["llvm", "dep:llvm-sys"]

[dependencies]
inkwell = { version = "0.9", features = ["llvm18-1-prefer-dynamic"], optional = true }
# Phase-7 L560 (Always-JIT via LLJIT): inkwell 0.9 does not expose ORC v2 /
# LLJIT, so the JIT subset calls `llvm-sys::orc2` directly. Same LLVM 18.1
# pin inkwell uses; `prefer-dynamic` matches inkwell's link strategy so we
# don't end up with two LLVM copies. Only activated by `lljit_prototype`
# feature — the normal `karac build` / AOT path keeps using inkwell-only.
llvm-sys = { version = "181", features = ["prefer-dynamic"], optional = true }
toml = { version = "0.8", default-features = false, features = ["parse"] }
regex = "1"
# Slice 2 of the PubGrub resolver entry (phase-5 line 813): structured
# semver-constraint vocabulary. `VersionReq` parses Cargo-style comparators
# (bare `1.2` → `^1.2.0` → `>=1.2.0, <2.0.0`; `=1.2.3`; `>=1.0, <1.5`; etc.)
# so the resolver can intersect them. `Version` is what each candidate
# package's catalog entry exposes.
semver = "1"
# Slice 2 of the lockfile entry (phase-5 line 831): BLAKE3 hashing of
# manifest TOML content for path-deps. Single hash per locked package so
# `kara.lock` records what the resolver consumed. Default features only
# (no rayon/SIMD-dispatch entanglement); pure-data hash use, no streams.
blake3 = { version = "1", default-features = false }
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["html"] }
# Slice F (`std.json`): backs the interpreter's `Json.parse` /
# `Json.stringify` dispatch directly (the runtime crate exposes the
# same impl through FFI for codegen builds — locked design choice (iii)).
# `preserve_order` feature gives insertion-order Object iteration per
# locked design choice (ii).
serde_json = { version = "1", features = ["preserve_order"] }

# Native-only deps. The browser playground (tracker line 703) builds
# `karac` for `wasm32-unknown-unknown`; `ureq` (sync HTTP client) and
# `rustyline` (libc TTY line editor) have no wasm32 surface. Both are
# only reached on native paths anyway — `ureq` from
# `src/interpreter/helpers.rs`'s `Http` resource backend (cfg-gated
# off on wasm32), `rustyline` from `src/repl.rs` (the entire module is
# cfg-gated off on wasm32).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2"
rustyline = "18.0.0"

[dev-dependencies]
# Phase-8 std.http HTTPS test client (`tests/http_server.rs` E2E for
# `Server.serve_tls`). Synchronous rustls — same version + `ring`
# provider the `runtime` crate uses — drives a single GET through the
# handshake against the karac-built HTTPS server. Chain validation is
# disabled in the test client (`NoVerify`) because the checked-in
# fixture cert has `CA:TRUE` and rustls rejects CA certs presented as
# end-entity; the smoke proves karac's serve_tls wiring, not rustls
# verification — see the test comment.
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring", "logging"] }

# Binary-size phase 1: drop `__eh_frame` + `__unwind_info` from emitted
# binaries by removing unwind tables from the runtime's release build.
# `karac_par_run` uses `std::panic::catch_unwind`; with `panic = "abort"`
# a panic in a worker aborts the process instead of unwinding, which is
# the desired behavior for `par {}` fail-fast semantics anyway. The
# `catch_unwind` call still compiles (it returns `Err` only on unwind)
# but becomes effectively unreachable — the compiler/runtime pair stays
# correct, and the binary loses unwind metadata on representative E2E
# builds.
#
# Cargo currently does not allow `panic` to be specified per-package
# (`panic may not be specified in a package profile`), so this lives at
# the workspace root and applies to release builds of every workspace
# member. Effect on the karac compiler itself: only its `--release`
# build is affected; default `cargo build` and `cargo test` use the dev
# profile and keep the default `panic = "unwind"`, so test-time panic
# capture and dev-mode backtraces are unchanged.
#
# See `docs/implementation_checklist/phase-7-codegen.md § "Phase 1
# binary-size optimization"` close-out for measured size deltas.
#
# Binary-size phase 2: fat LTO so the link-time DCE pass
# (`-Wl,-dead_strip` on Mach-O / `-Wl,--gc-sections` on ELF, applied at the
# cc-line in `link_executable_impl`) can see across the runtime's
# transitively-imported tokio / hyper / serde_json dep graph. Without LTO,
# rustc emits each crate as opaque object files and the linker can only
# DCE at object granularity — most useful symbols sit in the same object as
# their dependents and survive. LTO's bitcode pass inlines and devirtualizes
# across crate boundaries, exposing the actual call graph, then `-dead_strip`
# drops everything unreached from the entry point. Cargo does not permit
# `lto` in a per-package profile (same constraint as `panic`), so this
# applies to every workspace member's release build.
#
# Upgraded `thin` → `fat` on 2026-05-12 after measuring across four LeetCode
# benches: workloads that pull in runtime subsystems (`Vec.sort_by`, `Map`)
# shrink another -16.8% / -17.9% under fat vs thin; workloads at the post-DCE
# runtime floor (~33 KB) are unchanged. Fat LTO merges all runtime-crate
# bitcode into one module before optimization, exposing more dead code than
# thin's per-module summaries can reach. Cost: runtime-archive rebuild ~4–9 s
# (thin: ~2 s) — paid per `cargo build -p karac-runtime --release`, not per
# `karac build`. Downstream `karac build` link is unaffected (it's a normal
# `cc <obj> libkarac_runtime.a` invocation, not LTO). See `bench/bench.sh`
# binary-size pass in `kata-katas/leetcode/1601-1700/1665-...` for the
# measurement harness.
[profile.release]
panic = "abort"
lto = "fat"
