[workspace]
# `runtime/tls-cross-probe/*` are the phase-10 v64 P0 compile-only gates
# proving the TLS provider (rustls + ring) cross-compiles to the v1
# targets the full runtime can't reach yet (wasm32 ×2, Cortex-M; the
# tokio/mio/hyper tree blocks `karac-runtime` itself there). Members —
# not `exclude`d — so they resolve against THIS lockfile and the gate
# tests the exact rustls/ring versions the runtime pins. See the probes'
# Cargo.toml headers for the per-target feature recipes.
members = [
    "runtime",
    "playground",
    "kernel",
    "registry-proxy",
    "runtime/tls-cross-probe/std",
    "runtime/tls-cross-probe/embedded",
]
# Slice E (Parallax bench harness, 2026-05-09) — the `examples/parallax/
# bench/rust/` subproject is a self-contained reference implementation
# of the bench server in idiomatic tokio + hyper. Excluded from the
# karac-rust workspace so its dep tree (hyper / tokio / hyper-util)
# resolves independently of the compiler crate's deps and isn't built
# as part of `cargo test` in this workspace.
#
# Demo 1 slice 3 (phase-6-runtime.md line 180) — `examples/ws_idle_holder/
# bench/` is the flagship-demo bench-harness client (tokio + rustls,
# opens N idle wss:// connections + measures connect latency / per-conn
# memory / churn). Same rationale: its tokio-rustls dep tree resolves
# independently and it isn't part of the workspace `cargo test`.
#
# Demo 1 (M3 follow-on, 2026-05-30) — `examples/ws_idle_holder/rust/` is
# the Rust reference impl ("comparator") for the ws-idle-holder workload,
# benched via `examples/ws_idle_holder/bench/` for direct apples-to-apples
# comparison vs. the Kāra demo at `examples/ws_idle_holder/src/main.kara`.
exclude = [
    "examples/parallax/bench/rust",
    "examples/ws_idle_holder/bench",
    "examples/ws_idle_holder/rust",
]

[package]
name = "karac"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# `dep:llvm-sys` is pulled in alongside inkwell because the AOT codegen path
# itself now needs raw llvm-sys FFI: the LLVM coroutine intrinsics
# (`llvm.coro.id/begin/save/suspend/end/free`) are token-typed, and inkwell
# 0.9 *panics* on the LLVM `token` type (`LLVMTokenTypeKind => panic!` in its
# `types/enums.rs`). So the coro scaffolding for the network-async transform
# (phase-6 bug C / A2) is emitted via llvm-sys raw FFI interleaved with the
# inkwell-built body. Same 18.1 pin + `prefer-dynamic` as inkwell, so there's
# a single LLVM copy. (`lljit_prototype` separately re-lists `dep:llvm-sys`
# for its orc2 use; cargo unions the activations.)
llvm = ["inkwell", "dep:llvm-sys"]
# Throwaway prototype gate for phase-7 L558 sub-step (a): inkwell-MCJIT
# round-trip of representative Kāra modules. Off by default; not shipped
# in the normal karac binary. Removed when the orc2 wrap (L560) lands.
mcjit_prototype = ["llvm"]
# Phase-7 L560 W1+ gate: orc2/LLJIT wrap, calling `llvm-sys::orc2`
# directly (inkwell does not expose ORC v2). Off by default; promoted
# to default + integrated into `karac repl`/`karac test` once W6 closes.
#
# W3.4: pulls `karac-runtime` in as a regular optional dep (not just
# dev-dep) so the `karac_jit_runner` bin target — the subprocess
# helper that isolates JIT'd panics from `cargo test`'s runner — can
# link the runtime. Production builds with the default feature set
# don't activate this dep; the AOT path keeps consuming `libkarac_runtime.a`
# as a static archive instead.
lljit_prototype = ["llvm", "dep:llvm-sys", "dep:karac-runtime", "dep:libc"]

# Phase-7 L560 W3.4 — subprocess helper for JIT panic isolation. Takes
# a karac-emitted LLVM IR file on argv, runs it through `LLJITEngine`,
# exits with the JIT'd `main`'s return code. `tests/codegen.rs::jit_dispatch`
# shells out to this binary instead of running the JIT in-process, so
# `exit(1)` from a runtime panic (bounds check, map-miss, slice OOB)
# terminates only the helper child — `cargo test`'s runner is unaffected,
# `Command::output` captures stdout/stderr/exit-code identically to the
# AOT subprocess path. Only built when `lljit_prototype` is on; not
# shipped in the default karac binary set.
[[bin]]
name = "karac_jit_runner"
path = "src/bin/karac_jit_runner.rs"
required-features = ["lljit_prototype"]

# Drop-soundness fuzzer (ownership-model-mechanization spike, Slice 1). Drives
# the AOT codegen path (`compile_to_object` + `link_executable_with_sanitizer`),
# so it requires the `llvm` feature. Generates well-typed heap-core Kāra
# programs, links each under ASan+LSan, and lets the sanitizer judge — measures
# a drop-bug rate and emits a shrunk, bucketed repro corpus. See
# `src/bin/drop_fuzz.rs` and `scripts/drop-fuzz.sh`.
[[bin]]
name = "drop_fuzz"
path = "src/bin/drop_fuzz.rs"
required-features = ["llvm"]

[dependencies]
inkwell = { version = "0.9", features = ["llvm18-1-prefer-dynamic"], optional = true }
# Phase-7 L560 (Always-JIT via LLJIT): inkwell 0.9 does not expose ORC v2 /
# LLJIT, so the JIT subset calls `llvm-sys::orc2` directly. Same LLVM 18.1
# pin inkwell uses; `prefer-dynamic` matches inkwell's link strategy so we
# don't end up with two LLVM copies. Only activated by `lljit_prototype`
# feature — the normal `karac build` / AOT path keeps using inkwell-only.
llvm-sys = { version = "181", features = ["prefer-dynamic"], optional = true }
# Phase-7 L560 W3.4 (subprocess-helper for panic isolation): when the
# `lljit_prototype` feature is on, the `karac_jit_runner` bin target
# (src/bin/karac_jit_runner.rs) links the runtime so JIT'd Kāra
# programs can resolve `karac_*` symbols at JIT-link time. Optional
# regular dep (not dev-dep) because `[[bin]]` targets can't see
# `[dev-dependencies]`. The same crate continues to be statically
# linked as a `.a` for AOT builds via `link_executable`, untouched
# by this dep wiring.
karac-runtime = { path = "runtime", optional = true }
# slice c-repl.B.A: `karac_jit_runner` needs raw libc fds (`dup`, `dup2`,
# `fflush`) for the per-cell stdout/stderr redirect dance. Promoted from
# `[dev-dependencies]` (which `[[bin]]` targets can't see) to an optional
# regular dep activated by `lljit_prototype`. Production builds with the
# default feature set don't activate this dep.
libc = { version = "0.2", optional = true }
toml = { version = "0.8", default-features = false, features = ["parse"] }
regex = "1"
# Slice 2 of the PubGrub resolver entry (phase-5 line 813): structured
# semver-constraint vocabulary. `VersionReq` parses Cargo-style comparators
# (bare `1.2` → `^1.2.0` → `>=1.2.0, <2.0.0`; `=1.2.3`; `>=1.0, <1.5`; etc.)
# so the resolver can intersect them. `Version` is what each candidate
# package's catalog entry exposes.
semver = "1"
# Registry fetch epic slice 2 (phase-5 resolver follow-up (b)): extract a
# proxy-fetched `<name>-<version>.tar.gz` into a source directory the
# compiler can read. `flate2` (pure-Rust miniz_oxide) decompresses gzip;
# `tar` reads the archive with built-in path-traversal / zip-slip
# protection on unpack. Compiler-side (package-manager) deps in the same
# class as `ureq` / `toml` — never linked into emitted binaries.
flate2 = "1"
tar = "0.4"
# Slice 2 of the lockfile entry (phase-5 line 831): BLAKE3 hashing of
# manifest TOML content for path-deps. Single hash per locked package so
# `kara.lock` records what the resolver consumed. Default features only
# (no rayon/SIMD-dispatch entanglement); pure-data hash use, no streams.
blake3 = { version = "1", default-features = false }
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["html"] }
# Slice F (`std.json`): backs the interpreter's `Json.parse` /
# `Json.stringify` dispatch directly (the runtime crate exposes the
# same impl through FFI for codegen builds — locked design choice (iii)).
# `preserve_order` feature gives insertion-order Object iteration per
# locked design choice (ii).
serde_json = { version = "1", features = ["preserve_order"] }
# Phase-10 embedded-WIT componentization (`--bindings component`,
# src/componentize.rs): the `wasi_snapshot_preview1` **command** adapter
# bytes that `wasm-tools component new --adapt` needs to lift karac's
# wasm32-wasip1 C-ABI core modules into WASI 0.2 components. Vendored as
# a crate (wasmtime's own release artifact, pinned via Cargo.lock) rather
# than a downloaded blob so builds are reproducible and offline; the bytes
# are written to a temp file at componentize time (`KARAC_WASI_ADAPTER`
# overrides with an on-disk adapter). The componentization *transform*
# stays in the external `wasm-tools` binary per design.md § Component
# Model emission — this dep is pure data, no Component Model machinery.
wasi-preview1-component-adapter-provider = "45.0.1"

# Native-only deps. The browser playground (tracker line 703) builds
# `karac` for `wasm32-unknown-unknown`; `ureq` (sync HTTP client) and
# `rustyline` (libc TTY line editor) have no wasm32 surface. Both are
# only reached on native paths anyway — `ureq` from
# `src/interpreter/helpers.rs`'s `Http` resource backend (cfg-gated
# off on wasm32), `rustyline` from `src/repl.rs` (the entire module is
# cfg-gated off on wasm32).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2"
rustyline = "18.0.0"
# PubGrub version-solving algorithm for the dependency resolver
# (`src/pubgrub_solve.rs`; phase-5 resolver follow-up (a)). Drives
# version selection + conflict explanation over the fetched candidate
# set. Native-only alongside the rest of the fs/net-touching dep
# machinery (`dep_graph` / `dep_resolver` are `cfg(not(wasm32))`); the
# browser playground never resolves dependencies.
pubgrub = "0.4"
# Segmented-stack growth for the tree-walk interpreter's call recursion
# (`Interpreter::eval_body_growing`): ~8 Rust frames per Kāra call means
# deep-but-conforming Kāra recursion exhausts any fixed thread stack —
# `maybe_grow` re-homes the recursion onto heap segments instead of
# cliffing. psm has no stack-switching support on wasm32, so the browser
# playground build falls back to a plain call (cfg in the helper).
stacker = "0.1"

[dev-dependencies]
# Phase-7 L560 W3.1: pipe + dup2 + fork-safe fd dance for capturing
# stdout written by JIT'd Kāra code in `tests/lljit_e2e.rs` /
# `tests/lljit_prototype.rs` (the direct in-process LLJIT validation
# tests; `tests/codegen.rs::jit_dispatch` no longer needs libc as of
# W3.4 — it shells out to `karac_jit_runner` and lets `Command::output`
# capture stdout/stderr). Transitively present via llvm-sys; promoted
# to a direct dev-dep so the test code can name `libc::dup2` etc.
# without going through `llvm_sys::__libc` (which isn't re-exported).
libc = "0.2"

# Phase-8 std.http HTTPS test client (`tests/http_server.rs` E2E for
# `Server.serve_tls`). Synchronous rustls — same version + `ring`
# provider the `runtime` crate uses — drives a single GET through the
# handshake against the karac-built HTTPS server. Chain validation is
# disabled in the test client (`NoVerify`) because the checked-in
# fixture cert has `CA:TRUE` and rustls rejects CA certs presented as
# end-entity; the smoke proves karac's serve_tls wiring, not rustls
# verification — see the test comment.
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring", "logging"] }

# Phase-8 line 145 (HTTP/2): the `tests/http_server.rs` E2E harness drives
# the karac-built server binary with a real multiplexing h2 client. The
# `auto::Builder` server negotiates HTTP/2, so the test client must speak
# it: `hyper::client::conn::http2::handshake` opens an h2c (prior-knowledge)
# connection over plain TCP and can fan out concurrent streams to exercise
# multiplexing. h2 is async-only, so a private current-thread tokio runtime
# drives it inside the otherwise-synchronous test. The ALPN-over-TLS test
# reuses the existing sync rustls client (just sets `alpn_protocols`), so it
# needs none of this. All dev-only — the compiler crate's production build
# is unaffected. (`h2` itself is already in the lockfile transitively.)
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "macros"] }
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

# Registry-proxy line 930 (`HttpProxyClient` live HTTP fetch): the
# `tests/registry_proxy_wire.rs` integration test drives the real `ureq`
# client against the reference proxy server over a loopback socket, so it
# needs the reference server's library. Dev-only — the reference server is
# never linked into the compiler's production build.
kara-registry-proxy = { path = "registry-proxy" }

# Binary-size phase 1: drop `__eh_frame` + `__unwind_info` from emitted
# binaries by removing unwind tables from the runtime's release build.
# `karac_par_run` uses `std::panic::catch_unwind`; with `panic = "abort"`
# a panic in a worker aborts the process instead of unwinding, which is
# the desired behavior for `par {}` fail-fast semantics anyway. The
# `catch_unwind` call still compiles (it returns `Err` only on unwind)
# but becomes effectively unreachable — the compiler/runtime pair stays
# correct, and the binary loses unwind metadata on representative E2E
# builds.
#
# Cargo currently does not allow `panic` to be specified per-package
# (`panic may not be specified in a package profile`), so this lives at
# the workspace root and applies to release builds of every workspace
# member. Effect on the karac compiler itself: only its `--release`
# build is affected; default `cargo build` and `cargo test` use the dev
# profile and keep the default `panic = "unwind"`, so test-time panic
# capture and dev-mode backtraces are unchanged.
#
# See `docs/implementation_checklist/phase-7-codegen.md § "Phase 1
# binary-size optimization"` close-out for measured size deltas.
#
# Binary-size phase 2: fat LTO so the link-time DCE pass
# (`-Wl,-dead_strip` on Mach-O / `-Wl,--gc-sections` on ELF, applied at the
# cc-line in `link_executable_impl`) can see across the runtime's
# transitively-imported tokio / hyper / serde_json dep graph. Without LTO,
# rustc emits each crate as opaque object files and the linker can only
# DCE at object granularity — most useful symbols sit in the same object as
# their dependents and survive. LTO's bitcode pass inlines and devirtualizes
# across crate boundaries, exposing the actual call graph, then `-dead_strip`
# drops everything unreached from the entry point. Cargo does not permit
# `lto` in a per-package profile (same constraint as `panic`), so this
# applies to every workspace member's release build.
#
# Upgraded `thin` → `fat` on 2026-05-12 after measuring across four LeetCode
# benches: workloads that pull in runtime subsystems (`Vec.sort_by`, `Map`)
# shrink another -16.8% / -17.9% under fat vs thin; workloads at the post-DCE
# runtime floor (~33 KB) are unchanged. Fat LTO merges all runtime-crate
# bitcode into one module before optimization, exposing more dead code than
# thin's per-module summaries can reach. Cost: runtime-archive rebuild ~4–9 s
# (thin: ~2 s) — paid per `cargo build -p karac-runtime --release`, not per
# `karac build`. Downstream `karac build` link is unaffected (it's a normal
# `cc <obj> libkarac_runtime.a` invocation, not LTO). See `bench/bench.sh`
# binary-size pass in `kata-katas/leetcode/1601-1700/1665-...` for the
# measurement harness.
[profile.release]
panic = "abort"
lto = "fat"
