[package]
name = "karac-playground"
version = "0.1.0"
edition = "2021"
publish = false

# Browser playground for tracker line 703 (`play.kara-lang.org`).
# Builds to `wasm32-unknown-unknown` via `wasm-pack build --target web`;
# the resulting `pkg/` is loaded directly by `web/index.html` as an
# ES module. No native artifact — `crate-type` is cdylib only.

[lib]
crate-type = ["cdylib"]

[dependencies]
karac = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
